cleaned code, fixed white text in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -268,6 +268,7 @@ a {
     border-radius: 8px;
     background-color: white;
     text-align: center;
+    color: black
 }
 
 .project-image {
